main html framework

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,8 @@
     <script src="assets/app.js"></script>
 
   <script src="assets/factories/"></script>
-  <script src="assets/factories/"></script>
-  <script src="assets/controllers/"></script>
+  <script src="assets/factories/SearchFactory.js"></script>
+  <script src="assets/controllers/SearchController.js"></script>
   <script src="assets/controllers/"></script>
   <script src="assets/controllers/"></script>
   <script src="assets/controllers/"></script>
