--- a/client/index.html
+++ b/client/index.html
@@ -3,19 +3,16 @@
 <html ng-app='app'>
   <head>
     <meta charset="utf-8">
-    <title>Awesome Friends</title>
+    <title>Hello</title>
     <!-- Angular from bower_components, otherwise find the CDN -->
     <script src="angular/angular.js" charset="utf-8"></script>
     <script src="angular-route/angular-route.js" charset="utf-8"></script>
     <!-- End Bower Components -->
     <script src="assets/app.js"></script>
 
-  <script src="assets/factories/"></script>
+
   <script src="assets/factories/SearchFactory.js"></script>
   <script src="assets/controllers/SearchController.js"></script>
-  <script src="assets/controllers/"></script>
-  <script src="assets/controllers/"></script>
-  <script src="assets/controllers/"></script>
 
   </head>
   <body ng-view=''>
