create and search controller done with test pages

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
 
   <script src="assets/factories/SearchFactory.js"></script>
   <script src="assets/controllers/SearchController.js"></script>
+  <script src="assets/factories/CreateFactory.js"></script>
+  <script src="assets/controllers/CreateController.js"></script>
 
   </head>
   <body ng-view=''>
