--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <!-- Angular from bower_components, otherwise find the CDN -->
     <script src="angular/angular.js" charset="utf-8"></script>
     <script src="angular-route/angular-route.js" charset="utf-8"></script>
+    <script src="ngstorage/ngStorage.js" charset="utf-8"></script>
     <!-- End Bower Components -->
     <script src="assets/app.js"></script>
 
@@ -15,6 +16,9 @@
   <script src="assets/controllers/SearchController.js"></script>
   <script src="assets/factories/CreateFactory.js"></script>
   <script src="assets/controllers/CreateController.js"></script>
+  <script src="assets/controllers/LogInController.js"></script>
+  <script src="assets/factories/UserFactory.js"></script>
+
 
   </head>
   <body ng-view=''>
